Введение UI, первичная инициализация Переработка библиотеки ВК Добавление автоматической авторизации Добавление парсера JSON для ВК Перенос ядра в тело WPF приложения

--- a/.gitignore
+++ b/.gitignore
@@ -245,3 +245,6 @@ ModelManifest.xml
 /SocialNetworksLibrary/VK/Properties/Settings.settings
 /SocialNetworksLibrary/VK/Properties/Settings.Designer.cs
 /SocialNetworksLibrary/VK/app.config
+/TestGUI/TestGUI/app.config
+/TestGUI/TestGUI/Properties/Settings.Designer.cs
+/TestGUI/TestGUI/Properties/Settings.settings
