--- a/TestGUI/TestGUI/TestGUI.csproj
+++ b/TestGUI/TestGUI/TestGUI.csproj
@@ -74,6 +74,7 @@
     </Compile>
     <Compile Include="BaseInterfaces.cs" />
     <Compile Include="Core.cs" />
+    <Compile Include="GraphElements.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
