Снова переделан парсер JSON Включена библиотека поиска по лицам Частично собран G алгоритм

--- a/TestGUI/TestGUI/TestGUI.csproj
+++ b/TestGUI/TestGUI/TestGUI.csproj
@@ -34,8 +34,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Expression.Encoder, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=x86" />
+    <Reference Include="Microsoft.Expression.Encoder.Api2, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=x86" />
+    <Reference Include="Microsoft.Expression.Encoder.Types, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=x86" />
+    <Reference Include="Microsoft.Expression.Encoder.Utilities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=x86" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -48,6 +53,9 @@
     <Reference Include="VK">
       <HintPath>..\..\SocialNetworksLibrary\VK\bin\Debug\VK.dll</HintPath>
     </Reference>
+    <Reference Include="WebcamControl">
+      <HintPath>..\..\..\..\..\Documents\Visual Studio 2017\Projects\webcam wpf\WebcamControl.dll</HintPath>
+    </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -57,6 +65,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="VisualСortex.cs" />
     <Page Include="Authorize.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
